# mkd_prj

./: .gitignore  activate_ai_model.sh  activate_backend.sh  aurora-organics.code-workspace  deploy-heroku-docker-multi-app.md  docker-compose.yml  github-actions-heroku-deploy-guide.md  heroku_deploy.sh  heroku_deploy_fixed.sh  heroku_remove.sh  heroku_urls.sh  pyproject.toml  setup_environments.sh
.github/workflows/: deploy-heroku.yml  heroku-multi-container.yml
ai-model-api/: .dockerignore  Dockerfile  app.py  class_mapping.json  pyproject.toml  requirements.txt  wsgi.py
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  start_asgi.sh
backend/adminpanel/: urls.py  views.py
backend/aurora/: admin.py  models.py  serializers.py  urls.py  views.py
backend/aurora/migrations/: 0001_initial.py  0002_carouselimage.py  0003_faq.py  0004_blogpost.py  0005_analysishistory_predicted_condition.py  0006_analysishistory_confidence.py  0007_servicerating.py  0008_servicerating_approved_and_more.py  0009_consultationrequest_assigned_consultant_and_more.py
backend/myproject/: health.py  settings.py  urls.py
frontend/: .dockerignore  .env.production  Dockerfile  ai-skin-analyzer-train.ipynb  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/home/: unsplash.avif
frontend/src/: App.jsx  CartContext.jsx  Footer.css  Navbar.css  Results.jsx  UserDashboard.css  about.css  home.css  profile.css  style.css
frontend/src/components/: Carousel.jsx  Footer.jsx  Navbar.jsx  ProductForm.jsx  ProtectedAdminRoute.jsx  ProtectedRoute.jsx
frontend/src/config/: env.js
frontend/src/pages/: About.jsx  AnalysisDetail.jsx  Analyzer.jsx  Cart.jsx  Checkout.jsx  Consent.jsx  ConsultationForm.jsx  Contact.jsx  EditProfile.jsx  ForgotPassword.jsx  Home.jsx  Login.jsx  Orders.jsx  PaymentSuccess.jsx  PhotoInstructions.jsx  Profile.jsx  PublicFAQ.jsx  Register.jsx  Results.jsx  Shop.jsx  UserBlogs.jsx  Welcome.jsx
frontend/src/pages/admin/: AdminAnalytics.jsx  AdminBlogs.jsx  AdminCarousel.jsx  AdminConsultations.jsx  AdminDashboard.jsx  AdminFAQ.jsx  AdminHome.jsx  AdminImages.jsx  AdminLogin.jsx  AdminMessages.jsx  AdminOrders.jsx  AdminProducts.jsx  AdminRatings.jsx  AdminUsers.jsx  OrderSuccess.jsx
frontend/src/pages/utils/: cropImage.js
frontend/src/utils/: api.js
