[project]
name = "aurora-organics"
version = "0.1.0"
description = "Aurora Organics AI Skin Analyzer Platform"
dependencies = [
    # Django Core
    "Django>=5.2.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    
    # Flask Core
    "Flask>=3.0.0",
    "Flask-CORS>=4.0.0",
    
    # Authentication & Security
    "djangorestframework-simplejwt>=5.3.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.0.0",
    "stripe>=7.0.0",
    
    # Machine Learning & AI
    "tensorflow>=2.13.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    
    # Image Processing
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    
    # Data Processing
    "pandas>=2.0.0",
    
    # Utilities
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    
    # ASGI Servers
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=21.2.0",
]
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
